--- a/main_renderer/app/home/compile/compile.component.scss
+++ b/main_renderer/app/home/compile/compile.component.scss
@@ -14,9 +14,7 @@
   .box {
     outline: $border;
     //margin-top: 1px;
-    margin-left: 1px;
     margin-right: 1px;
-    margin-top: 1px;
     background-color: $grey3;
     flex: 1 0 0px;
     min-height: 0;
@@ -56,14 +54,11 @@
   display: flex;
   flex-direction: column;
   background: $grey3;
-  border-right: $border;
-  border-top: $border;
   position: relative;
 
   .content {
     height: calc(100% - #{$headerHeight + $tabsHeight - $margin});
     background: $grey3;
-    border-right: $border;
   }
 }
 
